--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -5,8 +5,9 @@
 \usepackage{xspace}
 \usepackage{minted}
 \usepackage{inconsolata}
-
 \usepackage{csquotes}
+
+\usemintedstyle{igor}
 
 \def\signed #1{{\leavevmode\unskip\nobreak\hfil\penalty50\hskip1em
   \hbox{}\nobreak\hfill #1%
