--- a/presentation/main_event_loop.tex
+++ b/presentation/main_event_loop.tex
@@ -1,6 +1,156 @@
 %&latex
 
 \section{Main Event Loop}
-\begin{frame}{Second Frame}
-Hello, world!
+
+\begin{frame}[t]{Main Event Loop}
+
+    Three core stages:
+
+    \begin{enumerate}
+        \itemsep.3em
+
+        \item \tbf{Listen for windowing system events}
+            \begin{itemize}
+                \item \textit{Block} until an event has been generated
+            \end{itemize}
+
+        \item \tbf{Create windowing system agnostic event abstraction}
+            \begin{itemize}
+                \item \textit{Extract} and \textit{bundle} concrete information into abstract window manager consumable
+            \end{itemize}
+
+        \item \tbf{Delegate work to different parts of the program}
+            \begin{itemize}
+                \item Perform window management actions based on the type of the concrete event
+            \end{itemize}
+
+    \end{enumerate}
+
+    \vfill
+
+\end{frame}
+
+\begin{frame}[fragile]{Windowing System Event Decoupling \hfill {\footnotesize \currentname}}
+
+    \tbf{1. Listen for windowing system events}
+
+    \begin{enumerate}
+
+        \item Concrete \texttt{Connection}'s external dependency generates \textit{events}
+            \begin{itemize}
+                \item Input events
+                \item Map notification events
+                \item ...
+            \end{itemize}
+
+        \item Convert windowing system specific event information into higher-level event abstraction
+            \begin{itemize}
+                \item Decouple \textit{windowing system event} from \textit{window manager event}
+            \end{itemize}
+
+        \item \texttt{Connection::step} method propagates event abstraction up to window manager logic
+            \begin{itemize}
+                \item \textsc{wmRS}: \rsin{fn step(&self) -> Option<Event>;}
+                \item \textsc{wmCPP}: \cppin{Event step();}
+            \end{itemize}
+
+    \end{enumerate}
+
+    \vfill
+
+\end{frame}
+
+\begin{frame}[fragile]{\underline{Rust}: Event Abstraction with Enumerations \hfill {\footnotesize \currentname}}
+
+    \tbf{2. Create windowing system agnostic event \underline{\texttt{enum}}}
+
+    \begin{itemize}
+
+        \item Definition of a type by \textit{enumerating} its \textit{variants}
+
+        \item Encodes \textit{meaning}
+            \begin{itemize}
+                \item Associated integer called \textit{discriminant}
+                \item Tagged union
+            \end{itemize}
+
+        \item May attach \textit{data}
+            \begin{itemize}
+                \item Data can be \textit{directly} associated with a variant
+            \end{itemize}
+
+        \item Size as large as its largest variant
+
+        \item Example: \textsc{wmRS}'s \rsin{Event} enumeration:\\
+\begin{minted}[fontsize=\scriptsize]{rust}
+   pub enum Event {
+       Mouse { event: MouseEvent },
+       Key { event: KeyEvent },
+       CloseRequest { window: Window },
+       ScreenChange,
+       // ...
+   }
+\end{minted}
+
+    \end{itemize}
+
+    \vfill
+
+\end{frame}
+
+\begin{frame}[c,fragile]{\underline{\cpp}: Event Abstraction with std::variant \hfill {\footnotesize \currentname}}
+
+    \tbf{2. Create windowing system agnostic event \underline{\texttt{std::variant}}}
+
+    \begin{itemize}
+
+        \item Definition of a type by \textit{enumerating} its \textit{alternatives}
+
+        \item Type-safe tagged union class template
+
+        \item Encodes \textit{meaning}
+
+        \item Contains \textit{data}
+            \begin{itemize}
+                \item Data can only \textit{indirectly} be associated with an alternative
+                \item Strong type alias required for same-type alternatives
+            \end{itemize}
+
+        \item Size as large as its largest variant
+
+        \item Example: \textsc{wmRS}'s \rsin{Event} enumeration:\\
+\begin{minipage}[t]{.45\linewidth}
+\begin{minted}[fontsize=\scriptsize]{cpp}
+  typedef std::variant<
+      std::monostate,
+      Mouse,
+      Key,
+      CloseRequest,
+      ScreenChange,
+      // ...
+  > Event;
+\end{minted}
+\end{minipage}%
+\begin{minipage}[t]{.45\linewidth}
+\begin{minted}[fontsize=\scriptsize]{cpp}
+  struct Mouse { MouseEvent event; };
+\end{minted}
+\begin{minted}[fontsize=\scriptsize]{cpp}
+  struct Key { KeyEvent event; };
+\end{minted}
+\begin{minted}[fontsize=\scriptsize]{cpp}
+  struct CloseRequest { Window window; };
+\end{minted}
+\begin{minted}[fontsize=\scriptsize]{cpp}
+  struct ScreenChange {};
+\end{minted}
+\begin{minted}[fontsize=\scriptsize]{cpp}
+  // ...
+\end{minted}
+\end{minipage}
+
+    \end{itemize}
+
+    \vfill
+
 \end{frame}
